# hbcn_constrainer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.ci  INPUT_FORMATS.md  README.md  TESTING.md  UNIT_TESTS.md  build.rs  demo_benchmarks.sh  mac4.hbcn  run_benchmarks.sh
.github/workflows/: ci.yml  rust.yml
benches/: README.md  constraint_generation.rs
docs/: CONSTRAINING.md  INPUT_FORMATS.md  TESTING.md
examples/: branded_types_demo.rs  constraint_building.rs  gag_output_suppression_demo.rs  named_brands_demo.rs
examples/hbcn/: distinct.hbcn  loop.hbcn  neg.hbcn  unmarked.hbcn
examples/structural_graphs/: ARV.graph  cyclic.graph  loop.graph  mac4.graph  mac5.graph  mac6.graph  test.graph
src/: analyse.rs  constrain.rs  hbcn.rs  lib.rs  main.rs  output_suppression.rs  sdc.rs  slack_match.rs  structural_graph.rs  verbose.rs
src/analyse/: hbcn.rs  mod.rs  vcd.rs
src/constrain/: hbcn.rs  mod.rs  sdc.rs  sdc_tests.rs  tests.rs
src/expand/: mod.rs
src/hbcn/: mod.rs  serialisation.rs  structural_graph.rs  test_helpers.rs
src/hbcn/parser/: ast.rs  mod.rs  parser.lalrpop
src/lp_solver/: coin_cbc.rs  gurobi.rs  macros.rs  mod.rs  ops.rs  output_suppression.rs
src/structuralGraph/: internal.rs  parser.lalrpop
src/structural_graph/: ast.rs  internal.rs  mod.rs  parser.lalrpop
tests/: README.md  integration_tests.rs
