[package]
authors = ["Marcos Sartori <marcos.sartori@acad.pucrs.br>"]
edition = "2021"
name = "hbcn"
version = "0.1.2"
[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
petgraph = "~0.5.1"
regex = "^1.4.2"
string_cache = "~0.8.1"
gurobi = "~0.3.4"
vcd = "~0.6.1"
lazy_static = "~1.4.0"
itertools = "~0.10.0"
rayon = "~1.5.0"
gag = "~0.1.10"
prettytable-rs = "0.10"
clap = { version = "3.2", features = ["derive"] }
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
ordered-float = "3.7.0"
anyhow = "1.0.71"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
