[package]
authors = ["Marcos Sartori <marcos.sartori@ncl.ac.uk>"]
edition = "2024"
name = "hbcn"
version = "0.6.0"

[features]
default = ["coin_cbc"]
gurobi = ["lp_solver/gurobi"]
coin_cbc = ["lp_solver/coin_cbc"]

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
petgraph = "~0.5.1"
regex = "^1.4.2"
string_cache = "~0.8.1"
lp_solver = { version = "0.1", default-features = false }
vcd = "~0.6.1"
lazy_static = "~1.4.0"
itertools = "~0.10.0"
rayon = "~1.5.0"
prettytable-rs = "0.10"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
ordered-float = "3.7.0"
anyhow = "1.0.71"
clap = { version = "4.5.50", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "constraint_generation"
harness = false
